--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --pry-radius: 5px;
     --pry-padding: 25px;
     --negative-margin: -25px;
+    --debugger: 1px solid #000;
+    --desk-padding: 10em;
 }
 
 *,
@@ -36,7 +38,7 @@ img {
 a {
     text-decoration: none;
     text-align: center;
-    color: var(--dark-blue);
+    color: var(--grayish-blue);
     font-size: 13px;
 }
 
@@ -70,7 +72,6 @@ ul {
 
 .container {
     width: calc(100% - 50px);
-    max-width: 1020px;
     margin: 0 auto;
 }
 
@@ -79,7 +80,7 @@ ul {
 
 .banner {
     min-height: 600px;
-    background-color: var(--white);
+    background-color: var(--very-light-gray);
     background-image: url(images/image-mockups.png), url("images/bg-intro-mobile.svg");
     background-repeat: no-repeat, no-repeat;
     background-size: contain, contain;
@@ -122,7 +123,7 @@ ul {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    border-radius: var(--pry-radius);
+    border-radius: var(--pry-radius); 
 }
 
 .banner .hamburger::before,
@@ -134,7 +135,7 @@ ul {
     width: 100%;
     height: 2px;
     background-color: #000;
-    border-radius: var(--pry-radius);
+    border-radius: 50%;
     transition: transform 300ms ease;
 }
 
@@ -320,27 +321,23 @@ footer .copyright {
 @media only screen and (min-width: 900px) {
 
     .banner {
-        background-color: var(--white);
         background-image: url(images/image-mockups.png), url("images/bg-intro-desktop.svg");
         background-repeat: no-repeat, no-repeat;
         background-size: contain, contain;
-        background-position: 100% -35%, 155% 200%;
-        display: grid;
-        grid-template-columns: 1fr;
-        z-index: -1;
+        background-position: 110% -35%, 140% -200%;
+        display: block;
+        margin: 0 var(--negative-margin);
     }
 
     .banner > .comp-logo {
+        width: 100%;
         display: flex;
         justify-content: space-around;
         align-items: center;
-        align-self: flex-start;
+        overflow: hidden;
     }
 
-    .banner #toggler {
-        display: none;
-    }
-
+    .banner #toggler,
     .banner .hamburger {
         display: none;
     }
@@ -355,9 +352,8 @@ footer .copyright {
         position: initial;
         background-color: transparent;
         padding: 0;
-        width: 70%;
+        width: 50%;
         height: inherit;
-        z-index: 2;
     }
 
     .banner #main-links > ul {
@@ -369,29 +365,103 @@ footer .copyright {
         padding: 0;
         margin: 0;
     }
+    
+    .banner #main-links li {
+        margin: 0;
+    }
 
     .banner #main-links .request {
         display: initial;
-        margin: 0 auto;
+        margin-left: auto;
     }
 
     .banner .banner-text {
-        justify-self: flex-start;
-        width: 300px;
+        position: absolute;
+        top: 50%;
+        left: 150px;
+        transform: translateY(-50%);
+        width: 320px;
+        justify-items: flex-start;
+    }
+    
+    .banner .banner-text > h1,
+    .choose-bank .service-wrapper,
+    .choose-bank .intro, 
+    .choose-bank .service,
+    .articles > h2 {
+        text-align: left;
     }
 
     /* Main Styles   */
+    section.choose-bank,
+    section.articles {
+        padding-left: var(--desk-padding);
+        padding-right: var(--desk-padding);
+    }
+    
     .choose-bank .service-wrapper {
         display: flex;
-        justify-content: flex-start;
-        text-align: left;
+        gap: 20px;
     }
 
     .choose-bank .intro {
-        text-align: left;
+        width: 50%;
+    }
+    
+    .choose-bank .service,
+    .choose-bank .service:first-child {
+        margin-top: 3rem;
+    }
+    
+    .choose-bank .service > img {
+        justify-self: flex-start;
+        margin-bottom: 1rem;
+    }
+    
+    .articles > .article-wrapper {
+        display: flex;
+        gap: 20px;
+    }
+    
+    
+        /* Footer styles  */
+    footer {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    footer > .comp-logo {
+        align-self: flex-start;
+    }
+    
+    #footer-links ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 100px;
     }
 
-    .choose-bank .service {
-        text-align: left;
+    #footer-links ul > li:nth-child(2),
+    #footer-links ul > li:nth-child(3) {
+        grid-column: 1;
+    }
+    
+    #footer-links ul > li:nth-child(4),
+    #footer-links ul > li:nth-child(5),
+    #footer-links ul > li:nth-child(6) {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    #footer-links ul > li:nth-child(5) {
+        grid-row: 2;
+    }
+    
+    #footer-links ul > li:nth-child(6) {
+        grid-row: 3;
+    }
+    
+    footer .copyright {
     }
 }
