--- a/style.css
+++ b/style.css
@@ -80,16 +80,17 @@ ul {
 
 .banner {
     min-height: 600px;
-    background-color: var(--very-light-gray);
+    background-color: var(--white);
     background-image: url(images/image-mockups.png), url("images/bg-intro-mobile.svg");
     background-repeat: no-repeat, no-repeat;
     background-size: contain, contain;
-    background-position: 100% -35%, top;
+    background-position: 100% -60%, top;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    margin-bottom: 6em;
+    margin: 0 var(--negative-margin) 6em var(--negative-margin);
+    padding: 0 var(--pry-padding);
 }
 
 .banner .comp-logo {
@@ -97,13 +98,14 @@ ul {
     justify-content: space-between;
     align-items: center;
     background-color: var(--white, #fff);
-    padding: 1em 0.5em;
+    padding: 1em 2em;
+    margin: 0 var(--negative-margin);
 }
 
 .banner #toggler {
     position: absolute;
     top: 10px;
-    right: 0;
+    right: 15px;
     width: 30px;
     height: 20px;
     padding: 10px;
@@ -115,7 +117,7 @@ ul {
 .banner .hamburger {
     position: absolute;
     top: 10px;
-    right: 0;
+    right: 15px;
     width: 30px;
     height: 30px;
     background-color: #fff;
@@ -174,10 +176,9 @@ ul {
     width: 100vw;
     height: 100%;
     overflow-y: hidden;
-    margin: 0 var(--negative-margin);
     background-color: hsl(233, 26%, 24%, .4);
     text-align: center;
-    padding: var(--pry-padding);
+    padding: var(--pry-padding) ;
     transition: opacity 400ms ease-in;
 }
 
@@ -310,6 +311,10 @@ footer > .comp-logo > img {
     color: var(--light-grayish-blue);
 }
 
+#footer-links > ul > li > a:hover {
+    color: var(--lime-green);
+}
+
 footer .copyright {
     display: flex;
     flex-direction: column;
@@ -321,12 +326,14 @@ footer .copyright {
 @media only screen and (min-width: 900px) {
 
     .banner {
+        background-color: var(--very-light-gray);
         background-image: url(images/image-mockups.png), url("images/bg-intro-desktop.svg");
         background-repeat: no-repeat, no-repeat;
         background-size: contain, contain;
         background-position: 110% -35%, 140% -200%;
         display: block;
         margin: 0 var(--negative-margin);
+        padding: 0;
     }
 
     .banner > .comp-logo {
@@ -335,6 +342,8 @@ footer .copyright {
         justify-content: space-around;
         align-items: center;
         overflow: hidden;
+        padding: 1em 0 1em 3em;
+        margin: 0;
     }
 
     .banner #toggler,
@@ -368,6 +377,28 @@ footer .copyright {
     
     .banner #main-links li {
         margin: 0;
+    }
+    
+    .banner #main-links a {
+        position: relative;
+        padding-bottom: 1em;
+    }
+    
+    .banner #main-links a::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--lime-green);
+        transform: scale(0);
+        transition: transform 300ms ease;
+    }
+    
+    .banner #main-links a:hover::after {
+        transform: scale(1);
     }
 
     .banner #main-links .request {
@@ -427,12 +458,15 @@ footer .copyright {
         /* Footer styles  */
     footer {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
+        padding: 2.5em var(--desk-padding);
     }
     
     footer > .comp-logo {
-        align-self: flex-start;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
     }
     
     #footer-links ul {
